-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Sharding 2021-11-01
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Parse warning
A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
/src/mongo/db/logical_session_id.h:152: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 120937 type qualifier on return type is meaningless