SERVER-60648 Coverity analysis defect 120937: Parse warning